--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TestGuru</title>
+    <title>Test Guru</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -10,5 +10,21 @@
 
   <body>
     <%= yield %>
+
+    <footer>
+      <hr>
+      <p>Автор: Михаил Круглик <br>
+        Проект:
+        <%= link_to 'Test Guru', github_url('miheykrug', 'test-guru'), :target => '_blank' %>
+        <br>
+        Создание и прохождение различных тестов с публикацией результатов в соц. сетях
+        <br>
+        <%= link_to 'Учебный проект в онлайн-школе Thinknetica',
+                    'http://thinknetica.com/', :target => '_blank' %>
+        <br>
+        <%= current_year %>
+      </p>
+
+    </footer>
   </body>
 </html>
