--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -13,8 +13,7 @@
     <th>Вопросы:</th>
     <th colspan="3">Действия</th>
   </tr>
-
     <%= render @questions %>
-
-
 </table>
+<%= link_to 'Создать новый вопрос', new_test_question_path(@test) %> <br>
+<%= link_to 'Назад', tests_path %>
