--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -10,10 +10,10 @@
   <strong>ID теста:</strong>
   <%= @question.test_id %>
 </p>
-<%= link_to 'Назад', test_path(@test) %> |
-<%= link_to 'Изменить', edit_test_question_path(@test, @question) %> |
+<%= link_to 'Назад', test_path(@question.test) %> |
+<%= link_to 'Изменить', edit_question_path(@question) %> |
 <%= link_to 'Удалить',
-            test_question_path(@test, @question),
+            question_path(@question),
             method: :delete,
             data: { confirm: 'Вы уверены?' }
 %>
