--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<h1><%= question_header %></h1>
+<h1><%= question_header(@question) %></h1>
 <%= form_for [@test, @question], local: true do |f| %>
   <%= render 'shared/errors' %>
   <p>
@@ -7,4 +7,4 @@
   </p>
   <p><%= f.submit %></p>
 <% end %>
-<%= link_to 'Назад', test_path(@test) %>
+<%= link_to 'Назад', test_path(@question.test) %>
