--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,10 +1,10 @@
 <tr>
   <td><%= question.body %></td>
-  <td><%= link_to 'Показать', test_question_path(@test, question) %></td>
-  <td><%= link_to 'Изменить', edit_test_question_path(@test, question) %></td>
+  <td><%= link_to 'Показать', question_path(question) %></td>
+  <td><%= link_to 'Изменить', edit_question_path(question) %></td>
   <td>
     <%= link_to 'Удалить',
-                test_question_path(@test, question),
+                question_path(question),
                 method: :delete,
                 data: { confirm: 'Вы уверены?' }
     %>
