create resources to Test

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,6 +1,6 @@
 <h1><%= question_header(@question) %></h1>
 <%= form_for [@test, @question], local: true do |f| %>
-  <%= render 'shared/errors' %>
+  <%= render 'shared/errors', resource: @question %>
   <p>
     <%= f.label :body, 'Вопрос' %>
     <%= f.text_field :body, id: :question_body %>
