--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -8,6 +8,11 @@
   <%= @test.level %>
 </p>
 
+<p>
+  <strong>Автор:</strong>
+  <%= @test.author.name %>
+</p>
+
 <table>
   <tr>
     <th>Вопросы:</th>
