--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,9 +1,9 @@
-<% if @question.errors.present? %>
+<% if resource.errors.present? %>
   <div>
-    <h3><%= pluralize(@question.errors.count, 'error') %> detected</h3>
+    <h3><%= pluralize(resource.errors.count, 'error') %> detected</h3>
 
     <ul>
-      <% @question.errors.full_messages.each do |message| %>
+      <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
