--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,15 +1,18 @@
+<h1>Вопрос теста <%= @question.test.title %></h1>
+
 <p>
   <strong>Вопрос:</strong>
   <%= @question.body %>
 </p>
-<p>
-  <strong>Название теста:</strong>
-  <%= @question.test.title %>
-</p>
-<p>
-  <strong>ID теста:</strong>
-  <%= @question.test_id %>
-</p>
+
+<h2>Ответы</h2>
+
+<%= link_to 'Создать новый ответ', new_question_answer_path(@question) %>
+
+<ol>
+  <%= render @question.answers %>
+</ol>
+
 <%= link_to 'Назад', test_path(@question.test) %> |
 <%= link_to 'Изменить', edit_question_path(@question) %> |
 <%= link_to 'Удалить',
