--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -1,7 +1,4 @@
-<p>
-  <strong>Название:</strong>
-  <%= @test.title %>
-</p>
+<h1>Тест <%= @test.title %></h1>
 
 <p>
   <strong>Уровень:</strong>
@@ -13,12 +10,12 @@
   <%= @test.author.name %>
 </p>
 
-<table>
-  <tr>
-    <th>Вопросы:</th>
-    <th colspan="3">Действия</th>
-  </tr>
-    <%= render @questions %>
-</table>
+<h2>Вопросы</h2>
+
 <%= link_to 'Создать новый вопрос', new_test_question_path(@test) %> <br>
+
+<ol>
+  <%= render @test.questions %>
+</ol>
+
 <%= link_to 'Назад', tests_path %>
