add test passages resources

--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -10,4 +10,5 @@
                   method: :delete,
                   data: { confirm: 'Вы уверены?'} %>
   </td>
+  <td><%= button_to 'Пройти тест', start_test_path(test) %></td>
 </tr>
