--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @test, local: true do |f| %>
+<%= form_with model: @test, local: true do |f| %>
   <%= render 'shared/errors', resource: @test %>
 
   <p>
