--- a/app/views/test_passages/result.html.slim
+++ b/app/views/test_passages/result.html.slim
@@ -5,12 +5,8 @@ h1
 
 p
   strong Результат:
-  - if (result = test_passage_success_percent(@test_passage)) < 85
-    span class="fail"
-      =<> result
-      | %. Тест не пройден.
-  - else
-    span class="success"
-      =<> result
-      | %. Тест пройден.
+  span class="#{result_class(@test_passage)}"
+    =<> @test_passage.result_to_percent
+    | %.
+    =< result_string(@test_passage)
 = link_to 'Список тестов', tests_path
