--- a/app/assets/stylesheets/flash.scss
+++ b/app/assets/stylesheets/flash.scss
@@ -3,6 +3,11 @@
   padding: 10px;
   border-radius: 5px;
 }
+
+.flash.notice {
+  border-color: #3c85e0;
+}
+
 .flash.alert {
   border-color: #ef2727;
 }
