--- a/app/views/admin/tests/index.html.slim
+++ b/app/views/admin/tests/index.html.slim
@@ -1,11 +1,13 @@
 h1 Список тестов
 
+p = link_to 'Создать новый тест', new_admin_test_path
+
 table
   tr
     th Название
     th Уровень
     th Категория
     th Кол-во<br>вопросов
-    th Действия
+    th colspan="3" Действия
 
   = render @tests
