Lesson 10: add admin questions and answers resources. redirect admin to admin_tests_path. custom flash message when login

--- a/app/views/admin/answers/show.html.slim
+++ b/app/views/admin/answers/show.html.slim
@@ -11,4 +11,4 @@ p
   strong Верный:
   =< @answer.correct
 
-= link_to 'Назад', question_path(@answer.question)
+= link_to 'Назад', admin_question_path(@answer.question)
