--- a/app/views/admin/questions/_form.html.slim
+++ b/app/views/admin/questions/_form.html.slim
@@ -1,5 +1,5 @@
 h1 = question_header(@question)
-= form_with model: [@test, @question], local: true do |f|
+= form_with model: [:admin, @test, @question], local: true do |f|
   = render 'shared/errors', resource: @question
   p
     => f.label :body, 'Вопрос'
