--- a/app/views/admin/answers/edit.html.slim
+++ b/app/views/admin/answers/edit.html.slim
@@ -4,4 +4,4 @@ p
   = @answer.question.body
 
 = render 'form'
-= link_to 'Назад', question_path(@answer.question)
+= link_to 'Назад', admin_question_path(@answer.question)
