--- a/app/views/admin/answers/new.html.slim
+++ b/app/views/admin/answers/new.html.slim
@@ -4,4 +4,4 @@ p
   = @question.body
 
 = render 'form'
-= link_to 'Назад', question_path(@question)
+= link_to 'Назад', admin_question_path(@question)
