--- a/app/views/tests/_test.html.slim
+++ b/app/views/tests/_test.html.slim
@@ -3,4 +3,4 @@ tr
   td = test_level(test)
   td = test.category.title
   td = test.questions.size
-  td = button_to 'Пройти тест', start_test_path(test)
+  td = button_to t('.start_button'), start_test_path(test)
