--- a/app/views/admin/_nav.html.slim
+++ b/app/views/admin/_nav.html.slim
@@ -1,3 +1,6 @@
+=> link_to 'English', url_for(:lang => 'en')
+||
+=< link_to 'Русский', url_for(:lang => 'ru')
 .nav.nav-admin
   span.nav-admin.title TestGuru Admin Panel
 
