--- a/app/views/admin/tests/_form.html.slim
+++ b/app/views/admin/tests/_form.html.slim
@@ -2,17 +2,17 @@
   = render 'shared/errors', resource: @test
 
   p
-    = f.label :title
+    => f.label :title
     = f.text_field :title, id: :test_title
 
   p
-    = f.label :level
+    => f.label :level
     = f.number_field :level, id: :test_level
 
   p
-    = f.label :category_id
+    => f.label :category_id
     = f.collection_select :category_id, Category.all, :id, :title, prompt: true
 
   p = f.submit
 
-= link_to 'Назад', admin_tests_path
+= link_to t('links.back'), admin_tests_path
