--- a/app/views/admin/tests/index.html.slim
+++ b/app/views/admin/tests/index.html.slim
@@ -1,13 +1,12 @@
-h1 Список тестов
+h1 = t('.header')
 
-p = link_to 'Создать новый тест', new_admin_test_path
+p = link_to t('.new'), new_admin_test_path
 
 table
   tr
-    th Название
-    th Уровень
-    th Категория
-    th Кол-во<br>вопросов
-    th colspan="3" Действия
-
+    th = Test.human_attribute_name('title')
+    th = Test.human_attribute_name('level')
+    th = Test.human_attribute_name('category')
+    th = t('.quantity')
+    th colspan="3" = t('.action')
   = render @tests
