--- a/app/views/admin/tests/show.html.slim
+++ b/app/views/admin/tests/show.html.slim
@@ -1,24 +1,22 @@
-h1
-  | Тест
-  =< @test.title
+h1 = t('.header1', title: @test.title)
 
 p
-  strong Уровень:
+  strong #{Test.human_attribute_name('level')}:
   =< @test.level
 
 p
   strong
-    'Автор:
+    '#{Test.human_attribute_name('author')}:
   | #{@test.author.first_name} #{@test.author.last_name}
 
-h2 Вопросы
+h2 = t('.header2')
 
-= link_to 'Создать новый вопрос', new_admin_test_question_path(@test)
+= link_to t('.new_question'), new_admin_test_question_path(@test)
 br
 
 ol
   = render @test.questions
   /= render partial: 'questions/question', collection: @test.questions
-=> link_to 'Изменить', edit_admin_test_path
+=> link_to t('links.edit'), edit_admin_test_path
 ||
-=< link_to 'Назад', admin_tests_path
+=< link_to t('links.back'), admin_tests_path
