--- a/app/views/shared/_errors.html.slim
+++ b/app/views/shared/_errors.html.slim
@@ -1,8 +1,7 @@
 - if resource.errors.present?
   div
     h3
-      => pluralize(resource.errors.count, 'error')
-      | detected
+      = t('.header', count: resource.errors.count)
 
     ul
       - resource.errors.full_messages.each do |message|
