--- a/app/views/test_passages/result.html.slim
+++ b/app/views/test_passages/result.html.slim
@@ -1,7 +1,4 @@
-h1
-  | Тест
-  =<> @test_passage.test.title
-  | пройден!
+h1 = t('.header', title: @test_passage.test.title)
 
 p
   strong Результат:
