--- a/app/views/tests/index.html.slim
+++ b/app/views/tests/index.html.slim
@@ -1,11 +1,11 @@
-h1 Список тестов
+h1 = t('tests.index.header')
 
 table
   tr
-    th Название
-    th Уровень
-    th Категория
-    th Кол-во<br>вопросов
-    th Действия
+    th = Test.human_attribute_name('title')
+    th = Test.human_attribute_name('level')
+    th = Test.human_attribute_name('category')
+    th = t('.quantity')
+    th = t('.action')
 
   = render @tests
