Lesson 12: fix mistake

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,7 +1,7 @@
 header
-  => link_to 'English', url_for( :lang => 'en' )
+  => link_to 'English', url_for(lang: :en )
   ||
-  =< link_to 'Русский', url_for( :lang => 'ru' )
+  =< link_to 'Русский', url_for(lang: :ru)
   nav
     .app-name
       => link_to 'Test Guru', root_path
