--- a/app/views/shared/_flash.html.slim
+++ b/app/views/shared/_flash.html.slim
@@ -1,2 +1,2 @@
 - flash.each do |key, value|
-  = content_tag(:p, value, class: "flash #{key}")
+  = content_tag(:p, value, class: "alert alert-#{key}")
