--- a/app/assets/stylesheets/flash.scss
+++ b/app/assets/stylesheets/flash.scss
@@ -1,13 +1,19 @@
-.flash {
-  border: 2px solid;
-  padding: 10px;
-  border-radius: 5px;
+//.flash {
+//  border: 2px solid;
+//  padding: 10px;
+//  border-radius: 5px;
+//}
+//
+//.flash.notice {
+//  border-color: #3c85e0;
+//}
+//
+//.flash.alert {
+//  border-color: #ef2727;
+//}
+.alert-alert {
+  @extend .alert-danger
 }
-
-.flash.notice {
-  border-color: #3c85e0;
-}
-
-.flash.alert {
-  border-color: #ef2727;
+.alert-notice {
+  @extend .alert-info
 }
