--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -1,6 +1,9 @@
 doctype html
 html
   head
+    meta charset="utf-8"
+    meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
+
     title Admin Panel | Test Guru
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
@@ -9,8 +12,8 @@ html
   body
     = render 'admin/nav'
 
-    = render 'shared/flash'
-
-    = yield
+    .container
+      = render 'shared/flash'
+      = yield
 
     = render 'layouts/footer'
