--- a/app/views/tests/index.html.slim
+++ b/app/views/tests/index.html.slim
@@ -1,11 +1,12 @@
 h1 = t('tests.index.header')
 
-table
-  tr
-    th = Test.human_attribute_name('title')
-    th = Test.human_attribute_name('level')
-    th = Test.human_attribute_name('category')
-    th = t('.quantity')
-    th = t('.action')
+table.table.table-striped
+  thead.thead-dark
+    tr
+      th = Test.human_attribute_name('title')
+      th = Test.human_attribute_name('level')
+      th = Test.human_attribute_name('category')
+      th = t('.quantity')
+      th = t('.action')
 
   = render @tests
