Lesson 14: add Octokit client. add links to gist flash messages

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -9,6 +9,6 @@ footer
     | Создание и прохождение различных тестов с публикацией результатов в соц. сетях
     br
     = link_to 'Учебный проект в онлайн-школе Thinknetica',
-                'http://thinknetica.com/', :target => '_blank'
+                'http://thinknetica.com/', target: '_blank'
     br
     = current_year
