--- a/app/views/admin/tests/index.html.slim
+++ b/app/views/admin/tests/index.html.slim
@@ -2,11 +2,12 @@ h1 = t('.header')
 
 p = link_to t('.new'), new_admin_test_path
 
-table
-  tr
-    th = Test.human_attribute_name('title')
-    th = Test.human_attribute_name('level')
-    th = Test.human_attribute_name('category')
-    th = t('.quantity')
-    th colspan="3" = t('.action')
+table.table.table-striped
+  thead.thead-dark
+    tr
+      th = Test.human_attribute_name('title')
+      th = Test.human_attribute_name('level')
+      th = Test.human_attribute_name('category')
+      th = t('.quantity')
+      th.text-center colspan="3" = t('.action')
   = render @tests
