--- a/app/views/shared/_flash.html.slim
+++ b/app/views/shared/_flash.html.slim
@@ -1,2 +1,2 @@
 - flash.each do |key, value|
-  = content_tag(:p, sanitize(value), class: "alert alert-#{key}")
+  = content_tag(:p, value.html_safe, class: "alert alert-#{key}")
