--- a/app/views/admin/tests/index.html.slim
+++ b/app/views/admin/tests/index.html.slim
@@ -5,7 +5,10 @@ p = link_to t('.new'), new_admin_test_path
 table.table.table-striped
   thead.thead-dark
     tr
-      th = Test.human_attribute_name('title')
+      th.sort-by-title.pointer
+        = Test.human_attribute_name('title')
+        = octicon 'arrow-up', class: 'text-success hide'
+        = octicon 'arrow-down', class: 'text-success hide'
       th = Test.human_attribute_name('level')
       th = Test.human_attribute_name('category')
       th = t('.quantity')
