--- a/app/views/admin/tests/index.html.slim
+++ b/app/views/admin/tests/index.html.slim
@@ -2,6 +2,7 @@ h1 = t('.header')
 
 p = link_to t('.new'), new_admin_test_path
 
+= render 'shared/errors', resource: @test
 table.table.table-striped
   thead.thead-dark
     tr
