--- a/app/views/shared/_errors.html.slim
+++ b/app/views/shared/_errors.html.slim
@@ -1,5 +1,5 @@
-- if resource.errors.present?
-  div
+- if resource.present? && resource.errors.present?
+  = content_tag :div, class: 'resource-errors', data: { resource_id: resource.id } do
     h3
       = t('.header', count: resource.errors.count)
 
