Lesson 17: add link to feedback create

--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -16,6 +16,8 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
             =< link_to 'Панель администратора', admin_tests_path, class: 'nav-link'
         li.nav-item
           =< link_to 'Выйти', destroy_user_session_path, method: :delete, class: 'nav-link'
+        li.nav-item
+          =< link_to 'Обратная связь', new_feedback_path, class: 'nav-link'
       - else
         li.nav-item
           => link_to 'Войти', new_user_session_path, class: 'nav-link'
