--- a/app/views/badges/show.html.slim
+++ b/app/views/badges/show.html.slim
@@ -11,5 +11,5 @@ p
 
 p
   strong #{Rule.human_attribute_name('description')}:
-  =< @badge.rule.description
+  =< @badge.description
 =< link_to t('links.back'), root_path
