Lesson 18. Badge: fix some mistakes

--- a/app/views/admin/badges/_form.html.slim
+++ b/app/views/admin/badges/_form.html.slim
@@ -11,7 +11,7 @@
 
   p
     => f.label :file_name
-    = f.select :file_name, GivingBadgesService::IMAGES, prompt: true
+    = f.select :file_name, Badge::IMAGES, prompt: true
 
   p
     => f.label :rule
